style.css
* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  background: transparent;
}
html {
  overflow: hidden;
}

body {
  margin: 0px;
  font-family: "Gloria Hallelujah", cursive;
  font-family: "Permanent Marker", cursive;
}

video {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: fixed;
  left: -15%;
  float: left;
  z-index: -1;
  overflow: hidden;
}

h1 {
  margin: 0px;
  padding: 0px;
}
.tiled-background {
  background-image: url(./Assets/Tommyj.png);
  background-size: 700px;
  width: 100%;
  height: 100%;
  border: 2px solid;
  opacity: 0.5;
}
#orange {
  display: block;
  background-color: rgb(255, 123, 0);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 0;
  clip-path: polygon(48% 50%, 38% 0%, 100% 0%, 100% 100%, 38% 100%);
}

#black {
  display: block;
  background-color: rgba(0, 0, 0, 0.459);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 0;
  clip-path: polygon(46% 50%, 36% 0%, 38% 0%, 48% 50%, 38% 100%, 36% 100%);
}

#white {
  display: block;
  background-color: white;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 0;
  clip-path: polygon(45% 50%, 35% 0%, 36% 0%, 46% 50%, 36% 100%, 35% 100%);
}

.name {
  display: flex;
  width: 35%;
  margin: 0%;
  color: white;
  font-size: 72px;
  position: absolute;
  bottom: 30px;
  justify-content: center;
  text-align: center;
  -webkit-text-fill-color: rgb(255, 123, 0);
  -webkit-text-stroke: 1px;
}

.socials {
  position: absolute;
  display: flex;
  flex-direction: row;
  width: 60%;
  right: 0px;
  justify-content: center;
}

.fa {
  padding: 10px;
  margin: 1%;
  font-size: 20px;
  text-align: center;
  text-decoration: none;
  border-radius: 10px;
  background: white;
  color: rgb(255, 123, 0);
  width: 30px;
}

.fa:hover {
  background-color: black;
  opacity: 0.5;
  transform: scale(0.8);
}

@media (max-width: 900px) {
  * {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    background: transparent;
  }

  .page {
    overflow: hidden;
  }

  .video-wrapper {
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
  }

  video {
    display: block;
    position: fixed;
    object-fit: cover;
    max-width: 900px;
    height: 50vh;
    top: 0%;
    left: 0%;
    z-index: -1;
  }

  .socials {
    flex-direction: row;
    width: 100%;
    margin-bottom: 0px;
    bottom: 10px;
    flex-wrap: wrap;
    align-items: flex-end;
  }

  .fa {
    padding: 10px;
    font-size: 12px;
    width: 16px;
  }

  #orange {
    clip-path: polygon(0% 40%, 50% 50%, 100% 40%, 100% 100%, 0% 100%);
  }

  #black {
    clip-path: polygon(0% 40%, 0% 38%, 50% 48%, 100% 38%, 100% 40%, 50% 50%);
  }

  #white {
    clip-path: polygon(0% 37%, 0% 38%, 50% 48%, 100% 38%, 100% 37%, 50% 47%);
  }

  .name {
    width: 100%;
    color: white;
    font-size: 40px;
    justify-content: center;
    bottom: 58%;
    left: 0%;
    text-align: center;
  }
}

